text contrast issue

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,7 +35,7 @@ a:visited {
 }
 
 a:link {
-    color: green;
+    color: #134f13;
     text-decoration: none;
 }
 
